--- a/src/scss/_06-components.scss
+++ b/src/scss/_06-components.scss
@@ -14,8 +14,8 @@
     }}
 
 #particles-js {
-    background: $primaryColor;
-    background-image: url('');
+    // background: $primaryColor;
+    background-image: url('../img/hero-image.jpg');
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
