--- a/src/scss/_04-elements.scss
+++ b/src/scss/_04-elements.scss
@@ -19,12 +19,12 @@ html {
  */
 
 ::-moz-selection {
-    background: #b3d4fc;
+    background: #A42AAD;
     text-shadow: none;
 }
 
 ::selection {
-    background: #b3d4fc;
+    background: #A42AAD;
     text-shadow: none;
 }
 
