nav update - removed bootstrap to clear out css. Began creating lightweight nav.

--- a/src/scss/_01-settings.scss
+++ b/src/scss/_01-settings.scss
@@ -19,6 +19,7 @@ $darkGreyTwo: #A5A8AB;
 $standardGrey: #D2D3D5;
 $lightGreyOne: #F6F6F7;
 $lightGreyTwo: #FAFAFA;
+$lightGreyTwoOpaque: rgba(250,250,250, 0.12);
 
 $default-font-size: 16;
 
