--- a/src/scss/_06-components.scss
+++ b/src/scss/_06-components.scss
@@ -13,6 +13,11 @@
     background-size: contain;
     }}
 
+.navbar {
+    position: relative;
+    z-index: 2;
+}
+
 #particles-js {
     // background: $primaryColor;
     background-image: url('../img/hero-image.jpg');
