--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 * ITCSS Global SASS
 * Source: https://www.xfive.co/blog/itcss-scalable-maintainable-css-architecture/
 */
-@import 'bootstrap';
+@impor 'skeleton';
 @import '01-settings';
 @import '02-tools';
 @import '03-generic';
