--- a/src/scss/_06-components.scss
+++ b/src/scss/_06-components.scss
@@ -10,7 +10,13 @@
 @media (min-width: 768px) {
 .navbar-logo {
     background: url(../img/white_ackee_logo.svg) left no-repeat;
-    background-size: contain;
+    background-size: 10rem;
+    }}
+
+@media (max-width: 768px) {
+.navbar-logo {
+    background: url(../img/white_ackee_icon.svg) left no-repeat;
+    background-size: 4rem;
     }}
 
 .navbar {
@@ -18,8 +24,41 @@
     z-index: 2;
 }
 
+.menu-handle {
+    width: 100%;
+    background-color: $primaryColor;
+    text-align: right;
+    box-sizing: border-box;
+    padding: 15px 10px;
+    cursor: pointer;
+    color: $white;
+    display: none;
+}
+
+
+@media screen and (max-width: 580px) {
+    nav ul {
+        max-height: 0px;
+    }
+    .menu-visible {
+        max-height: 20em;
+        background: $darkGreyOne;
+    }
+    nav ul li { 
+        width: 100%;
+        box-sizing: border-box;
+        padding: 15px;
+        text-align: right;
+        background: $darkGreyOne;
+    }
+    .menu-handle{ 
+        display: block;
+    }
+}
+
+/* Header */
+
 #particles-js {
-    // background: $primaryColor;
     background-image: url('../img/hero-image.jpg');
     background-size: cover;
     background-position: 50% 50%;
