project images added, skeleton grid added to ITCSS files accordingly, styling to h2 and p tags

--- a/src/scss/_04-elements.scss
+++ b/src/scss/_04-elements.scss
@@ -104,21 +104,29 @@ a:focus {
 h1{
     font-family: $heading;
     font-size: 42px;
+    line-height: 1.5em;
+    margin-bottom: 2em;
 }
 
 h2 {
     font-family: $heading;
     font-size: 36px;
+    line-height: 1.5em;
+    margin-bottom: 2em;
 }
 
 h3 {
     font-family: $heading;
     font-size: 20px;
+    line-height: 1.5em;
+    margin-bottom: 2em;
 }
 
 p {
     font-family: $body;
     font-size: 16px;
+    line-height: 1.5em;
+    margin-bottom: 2em;
 }
 
 li {
@@ -143,4 +151,19 @@ nav ul li {
 nav ul li:hover {
     background-color: $white;
     color: $primaryColor;
+}
+
+code {
+  padding: .2rem .5rem;
+  margin: 0 .2rem;
+  font-size: 90%;
+  white-space: nowrap;
+  background: #F1F1F1;
+  border: 1px solid #E1E1E1;
+  border-radius: 4px; 
+}
+pre > code {
+  display: block;
+  padding: 1rem 1.5rem;
+  white-space: pre; 
 }
