Images now blur on hover

--- a/src/scss/_05-object.scss
+++ b/src/scss/_05-object.scss
@@ -56,7 +56,7 @@
     }
     .column,
     .columns {
-        margin-left: 4%;
+        margin-left: 0;
     }
     .column:first-child,
     .columns:first-child {
@@ -79,7 +79,7 @@
         width: 39.3333333333%;
     }
     .six.columns {
-        width: 48%;
+        width: 50%;
     }
     .seven.columns {
         width: 56.6666666667%;
