--- a/src/scss/_04-elements.scss
+++ b/src/scss/_04-elements.scss
@@ -38,8 +38,7 @@ hr {
     height: 1px;
     border: 0;
     border-top: 1px solid $standardGrey;
-    padding: 20px;
-    width: 75%;
+    width: 100%;
 }
 
 
@@ -82,6 +81,10 @@ textarea {
     resize: vertical;
 }
 
+section {
+    padding: 100px 0;
+}
+
 a {
     font-size: 16px;
     font-family: $body;
@@ -101,7 +104,7 @@ a:focus {
     outline-offset: -2px;
 }
 
-h1{
+h1 {
     font-family: $heading;
     font-size: 42px;
     line-height: 1.5em;
@@ -122,17 +125,21 @@ h3 {
     margin-bottom: 2em;
 }
 
+h4 {
+    font-family: $heading;
+    font-size: 16px;
+    line-height: 1.5em;
+}
+
 p {
     font-family: $body;
     font-size: 16px;
     line-height: 1.5em;
-    margin-bottom: 2em;
 }
 
 li {
     color: #ffffff;
 }
-
 
 nav ul {
     overflow: hidden;
@@ -154,16 +161,111 @@ nav ul li:hover {
 }
 
 code {
-  padding: .2rem .5rem;
-  margin: 0 .2rem;
-  font-size: 90%;
-  white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
-  border-radius: 4px; 
+    padding: .2rem .5rem;
+    margin: 0 .2rem;
+    font-size: 90%;
+    white-space: nowrap;
+    background: #F1F1F1;
+    border: 1px solid #E1E1E1;
+    border-radius: 4px;
 }
-pre > code {
-  display: block;
-  padding: 1rem 1.5rem;
-  white-space: pre; 
+
+pre>code {
+    display: block;
+    padding: 1rem 1.5rem;
+    white-space: pre;
+}
+
+input {
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    width: 300px;
+    border: none;
+    border-bottom: 1px solid $white;
+    background-color: transparent;
+    color: $white;
+}
+
+input:focus {
+    border-bottom: 0px;
+    outline: none;
+}
+
+textarea {
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    width: 300px;
+    border: none;
+    border-bottom: 1px solid $white;
+    background-color: transparent;
+    color: $white;
+}
+
+textarea:focus {
+    border-bottom: 0px;
+    outline: none;
+}
+
+label {
+    color: $white;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: 0.2s ease all;
+}
+
+input:focus~label,
+input:valid~label {
+    top: -20px;
+    font-size: 14px;
+    color: $accent;
+}
+
+textarea:focus~label,
+textarea:valid~label {
+    top: -20px;
+    font-size: 14px;
+    color: $accent;
+}
+
+input:focus~.bar:before,
+input:focus~.bar:after {
+    width: 50%;
+}
+
+textarea:focus~.bar:before,
+textarea:focus~.bar:after {
+    width: 50%;
+}
+
+input:focus~.highlight {
+    animation: inputHighlighter 0.3s ease;
+}
+
+textarea:focus~.highlight {
+    animation: inputHighlighter 0.3s ease;
+}
+
+@keyframes inputHighlighter {
+    from {
+        background: $accent;
+    }
+    to {
+        width: 0;
+        background: transparent;
+    }
+}
+
+footer.global-footer {
+    background:$primaryColor;
+    padding:10px 0;
+    color:$white;
+    position:absolute;
+    width: 100%;
+    font-size: 14px;
 }
