--- a/src/scss/_06-components.scss
+++ b/src/scss/_06-components.scss
@@ -1,106 +1,114 @@
-     /* ========================================================================================================================================
+/* ========================================================================================================================================
   COMPONENTS
   Specific UI components. This is where majority of our work takes place and our UI components are often composed of Objects and Components
 =========================================================================================================================================== */
- /* Homepage */
- /* Nav */
- 
- @media (min-width: 768px) {
-     .navbar-logo {
-         background: url(../img/white_ackee_logo.svg) left no-repeat;
-         background-size: 10rem;
-     }
- }
- 
- @media (max-width: 768px) {
-     .navbar-logo {
-         background: url(../img/white_ackee_icon.svg) left no-repeat;
-         background-size: 4rem;
-     }
- }
- 
- .navbar {
-     position: relative;
-     z-index: 2;
- }
- 
- .menu-handle {
-     width: 100%;
-     background-color: $primaryColor;
-     text-align: right;
-     box-sizing: border-box;
-     padding: 15px 10px;
-     cursor: pointer;
-     color: $white;
-     display: none;
- }
- 
- @media screen and (max-width: 580px) {
-     nav ul {
-         max-height: 0px;
-     }
-     .menu-visible {
-         max-height: 20em;
-         background: $darkGreyOne;
-     }
-     nav ul li {
-         width: 100%;
-         box-sizing: border-box;
-         padding: 15px;
-         text-align: right;
-         background: $darkGreyOne;
-     }
-     .menu-handle {
-         display: block;
-     }
- }
- /* Header */
- 
- #particles-js {
-     background-image: url('../img/hero-image.jpg');
-     background-size: cover;
-     background-position: 50% 50%;
-     background-repeat: no-repeat;
-     background-attachment: fixed;
-     height: 80vh;
- }
- 
- .hero {
-     width: 100vw;
-     height: 80vh;
-     overflow: hidden;
-     position: absolute;
-     left: 0;
-     top: 0;
- }
- 
- .hero-height {
-     height: 80vh;
-     padding: 0;
- }
- 
- .white-text {
-     color: $white;
- }
- 
- .intro {
-     position: absolute;
-     left: 0;
-     top: 40%;
-     width: 100vw;
- }
- /* Body */
- 
- .central-text-intro {
-     margin-top: 2em;
-     text-align: center;
-     min-height: 250px;
- }
- 
- .text-block {
-     min-height: 500px;
- }
- 
+
+
+/* Homepage */
+
+
+/* Nav */
+
+@media (min-width: 768px) {
+    .navbar-logo {
+        background: url(../img/white_ackee_logo.svg) left no-repeat;
+        background-size: 10rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar-logo {
+        background: url(../img/white_ackee_icon.svg) left no-repeat;
+        background-size: 4rem;
+    }
+}
+
+.navbar {
+    position: relative;
+    z-index: 2;
+}
+
+.menu-handle {
+    width: 100%;
+    background-color: $primaryColor;
+    text-align: right;
+    box-sizing: border-box;
+    padding: 15px 10px;
+    cursor: pointer;
+    color: $white;
+    display: none;
+}
+
+@media screen and (max-width: 580px) {
+    nav ul {
+        max-height: 0px;
+    }
+    .menu-visible {
+        max-height: 20em;
+        background: $darkGreyOne;
+    }
+    nav ul li {
+        width: 100%;
+        box-sizing: border-box;
+        padding: 15px;
+        text-align: right;
+        background: $darkGreyOne;
+    }
+    .menu-handle {
+        display: block;
+    }
+}
+
+
+/* Header */
+
+#particles-js {
+    background-image: url('../img/hero-image.jpg');
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 80vh;
+}
+
+.hero {
+    width: 100vw;
+    height: 80vh;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.hero-height {
+    height: 80vh;
+    padding: 0;
+}
+
+.white-text {
+    color: $white;
+}
+
+.intro {
+    position: absolute;
+    left: 0;
+    top: 40%;
+    width: 100vw;
+}
+
+
+/* Body */
+
+.central-text-intro {
+    margin-top: 2em;
+    text-align: center;
+    min-height: 250px;
+}
+
+.text-block {
+    min-height: 500px;
+}
+
 .small-text-block {
     min-height: 250px;
 }
@@ -108,197 +116,203 @@
 .grey-text-block {
     background-color: $lightGreyTwo;
 }
- .divider {
-     margin-top: 50px;
- }
- 
- .left-text-intro {
-     margin-top: 2em;
-     text-align: left;
-     height: 250px;
-     padding-right: 40px;
- }
- 
- .right-text-intro {
-     margin-top: 2em;
-     text-align: right;
-     height: 250px;
-     padding-left: 40px;
- }
- 
- .image-blur {
-     width: 100%;
-     height: 100%;
-     overflow: hidden;
-     position: relative;
- }
- 
- .image-blur img {
-     height: 100%;
-     width: 100%;
-     transition: all 0.4s ease-in-out;
-     filter: blur(0);
- }
- 
- .image-blur img:hover {
-     transform: scale(1.5);
-     filter: blur(10px);
-     filter: url(#blur1);
- }
- 
- @media (min-width: 970px) {
-     .caption {
-         z-index: 3;
-         opacity: 0;
-         display: block;
-         position: absolute;
-         color: $white;
-         padding-left: 40px;
-         transition: all 0.4s ease-in-out;
-         top: 70%;
-         h3 {
-             margin: 0;
-         }
-         p {
-             font-size: 12px;
-         }
-     }
- }
- 
- @media (max-width: 970px) {
-     .caption {
-         z-index: 3;
-         opacity: 0;
-         display: block;
-         position: absolute;
-         color: $white;
-         padding-left: 40px;
-         transition: all 0.4s ease-in-out;
-         top: 50%;
-         h3 {
-             margin: 0;
-         }
-         p {
-             font-size: 12px;
-         }
-     }
- }
- 
- a:hover .caption {
-     opacity: 1;
- }
- 
- .contact-hero {
-     position: absolute;
- }
- 
- .contact-form {
-     position: relative;
-     background-image: url(../img/contact-hero.jpg);
-     background-size: cover;
-     background-repeat: no-repeat;
- }
- 
- .quotation {
-     margin-bottom: -30px;
-     color: $accent;
- }
- 
- .contact-heading {
-     margin-top: 0px;
-     color: $white;
- }
- 
- .footer {
-     background-color: $primaryColor;
-     padding-top: 0px;
-     color: $white;
- }
- /* Inputs */
- 
- .group {
-     position: relative;
-     margin-bottom: 45px;
- }
- 
- /* BOTTOM BARS ================================= */
- 
- .bar {
-     position: relative;
-     display: block;
-     width: 300px;
- }
- 
- .bar:before,
- .bar:after {
-     content: '';
-     height: 2px;
-     width: 0;
-     bottom: 1px;
-     position: absolute;
-     background: $accent;
-     transition: 0.2s ease all;
- }
- 
- .bar:before {
-     left: 50%;
- }
- 
- .bar:after {
-     right: 50%;
- }
- 
- .highlight {
-     position: absolute;
-     height: 60%;
-     width: 100px;
-     top: 25%;
-     left: 0;
-     pointer-events: none;
-     opacity: 0.5;
- }
- 
+
+.divider {
+    margin-top: 50px;
+}
+
+.left-text-intro {
+    margin-top: 2em;
+    text-align: left;
+    height: 250px;
+    padding-right: 40px;
+}
+
+.right-text-intro {
+    margin-top: 2em;
+    text-align: right;
+    height: 250px;
+    padding-left: 40px;
+}
+
+.image-blur {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.image-blur img {
+    height: 100%;
+    width: 100%;
+    transition: all 0.4s ease-in-out;
+    filter: blur(0);
+}
+
+.image-blur img:hover {
+    transform: scale(1.5);
+    filter: blur(10px);
+    filter: url(#blur1);
+}
+
+@media (min-width: 970px) {
+    .caption {
+        z-index: 3;
+        opacity: 0;
+        display: block;
+        position: absolute;
+        color: $white;
+        padding-left: 40px;
+        transition: all 0.4s ease-in-out;
+        top: 70%;
+        h3 {
+            margin: 0;
+        }
+        p {
+            font-size: 12px;
+        }
+    }
+}
+
+@media (max-width: 970px) {
+    .caption {
+        z-index: 3;
+        opacity: 0;
+        display: block;
+        position: absolute;
+        color: $white;
+        padding-left: 40px;
+        transition: all 0.4s ease-in-out;
+        top: 50%;
+        h3 {
+            margin: 0;
+        }
+        p {
+            font-size: 12px;
+        }
+    }
+}
+
+a:hover .caption {
+    opacity: 1;
+}
+
+.contact-hero {
+    position: absolute;
+}
+
+.contact-form {
+    position: relative;
+    background-image: url(../img/contact-hero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.quotation {
+    margin-bottom: -70px;
+    color: $accent;
+    font-size: 80px;
+}
+
+.contact-heading {
+    margin-top: 0px;
+    color: $white;
+}
+
+.footer {
+    background-color: $primaryColor;
+    padding-top: 0px;
+    color: $white;
+}
+
+
+/* Inputs */
+
+.group {
+    position: relative;
+    margin-bottom: 45px;
+}
+
+
+/* BOTTOM BARS ================================= */
+
+.bar {
+    position: relative;
+    display: block;
+    width: 300px;
+}
+
+.bar:before,
+.bar:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 1px;
+    position: absolute;
+    background: $accent;
+    transition: 0.2s ease all;
+}
+
+.bar:before {
+    left: 50%;
+}
+
+.bar:after {
+    right: 50%;
+}
+
+.highlight {
+    position: absolute;
+    height: 60%;
+    width: 100px;
+    top: 25%;
+    left: 0;
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+
 /* Button */
- 
- .md-button {
-     display: inline-block;
-     position: relative;
-     background: $white;
-     width: 150px;
-     height: 50px;
-     color: $primaryColor;
-     text-decoration: none;
-     text-transform: lowercase;
-     margin: 1rem;
-     border-radius: 2px;
-     font-family: $heading;
-     font-size: 20px;
-     outline: none;
-     border: 0px;
- }
- 
- .md-button span {
-     width: 100%;
-     text-align: center;
-     position: absolute;
-     top: 50%;
-     left: 50%;
-     transform: translate(-50%, -50%);
-     z-index: 9999;
-     pointer-events: none;
-     outline: none;
-     border: 0px;
- }
- 
- .md-button canvas {
-     position: absolute;
-     top: 0;
-     left: 0;
-     z-index: 4;
-     border-radius: 2px;
-     outline: none;
- }
- 
+
+.md-button {
+    display: inline-block;
+    position: relative;
+    background: $white;
+    width: 150px;
+    height: 50px;
+    color: $primaryColor;
+    text-decoration: none;
+    text-transform: lowercase;
+    margin: 1rem;
+    border-radius: 2px;
+    font-family: $heading;
+    font-size: 20px;
+    outline: none;
+    border: 0px;
+}
+
+.md-button span {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    pointer-events: none;
+    outline: none;
+    border: 0px;
+}
+
+.md-button canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    border-radius: 2px;
+    outline: none;
+}
+
 .footer-icon {
     height: 4rem;
     padding-top: 0.4em;
@@ -308,19 +322,50 @@
     padding-right: 80px;
 }
 
+
 /* About page */
 
 .about-hero {
     background-image: url('../img/dark-image-hero.jpg');
-     background-size: cover;
-     background-position: 50% 50%;
-     background-repeat: no-repeat;
-     background-attachment: fixed;
-     height: 80vh;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 80vh;
 }
 
 .showreel-video {
     width: 100%;
+}
+
+.media-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    background-image: url(../img/play-button.svg);
+    background-color: transparent!important;
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 1;
+    cursor: pointer;
+    outline: none;
+    border: 0px;
+}
+
+.showreel {
+  margin: 1em auto;
+  display: block;
+  position: relative;
+  max-width: 100%;
+  
+  &:hover {
+   + .video-control {
+     opacity: 0.8;
+   }
+  }
 }
 
 .video-control {
@@ -346,12 +391,11 @@
   }
   
   &:before {
-    content: '\25BA';
+    content: url(../img/play-button.svg);
   }
   
   &:after {
-    content: 'll';
-    font-weight: 700;
+    content: url(../img/pause-button.svg);
   }
   
   &.paused {
