Temporary particles-js fix added to all pages

--- a/src/scss/_05-object.scss
+++ b/src/scss/_05-object.scss
@@ -11,31 +11,6 @@
     padding: 0.2em 0;
 }
 
-
-/* Screenreader class from bootstrap, specifically for A11y */
-
-.sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0
-}
-
-.sr-only-focusable:active,
-.sr-only-focusable:focus {
-    position: static;
-    width: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    clip: auto
-}
-
-
 /* Grid System based on Skeleton.css
 * Skeleton V2.0.4
 * Copyright 2014, Dave Gamache
@@ -262,6 +237,13 @@
 
 .image-three {
     background-image: url(../img/jf-hero.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%, 50%;
+}
+
+.image-four {
+    background-image: url(../img/ackee-hero.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50%, 50%;
