Work images added . Google analytics added

--- a/src/scss/_05-object.scss
+++ b/src/scss/_05-object.scss
@@ -222,28 +222,28 @@
 }
 
 .image-one {
-    background-image: url(../img/cgm-hero.png);
+    background-image: url(../img/uwork-candid-man-hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50%, 50%;
 }
 
 .image-two {
-    background-image: url(../img/uwork-hero.png);
+    background-image: url(../img/cgm-ipad-hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50%, 50%;
 }
 
 .image-three {
-    background-image: url(../img/jf-hero.png);
+    background-image: url(../img/jf-hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50%, 50%;
 }
 
 .image-four {
-    background-image: url(../img/ackee-hero.png);
+    background-image: url(../img/ackee-work-hero.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50%, 50%;
