--- a/src/scss/_07-trumps.scss
+++ b/src/scss/_07-trumps.scss
@@ -172,3 +172,15 @@
 .hr-full-width {
     width: 100%;
 }
+
+.underline {
+    text-decoration: overline;
+}
+
+.pink-text {
+    color: $accent;
+}
+
+.fade-in {
+    opacity: 0;
+}
