--- a/src/scss/_05-object.scss
+++ b/src/scss/_05-object.scss
@@ -11,6 +11,7 @@
     padding: 0.2em 0;
 }
 
+
 /* Grid System based on Skeleton.css
 * Skeleton V2.0.4
 * Copyright 2014, Dave Gamache
@@ -20,31 +21,31 @@
 * 12/29/2014
 */
 
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
+}
+
 .container {
-    position: relative;
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 0 20px;
-    box-sizing: border-box;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .column,
 .columns {
     width: 100%;
-    float: left;
     box-sizing: border-box;
 }
 
 
 /* For devices larger than 400px */
-
-@media (min-width: 400px) {
-    .container {
-        width: 85%;
-        padding: 0;
-    }
-}
 
 
 /* For devices larger than 550px */
@@ -55,11 +56,13 @@
     }
     .column,
     .columns {
-        margin-left: 0;
+        position: relative;
+        min-height: 1px;
     }
     .column:first-child,
     .columns:first-child {
-        margin-left: 0;
+        position: relative;
+        min-height: 1px;
     }
     .one.column,
     .one.columns {
@@ -194,28 +197,34 @@
     display: block;
 }
 
+
 /* Gallery .css */
+
+
 /* Theme */
 
 .gallery .control-button {
-  color: #ccc;
-  color: rgba(255, 255, 255, 0.4);
+    color: #ccc;
+    color: rgba(255, 255, 255, 0.4);
 }
 
 .gallery .control-button:hover {
-  color: white;
-  color: rgba(255, 255, 255, 0.8);
+    color: white;
+    color: rgba(255, 255, 255, 0.8);
 }
+
 
 /*
 	Theme controls how everything looks in Gallery CSS.
 */
+
 .gallery {
     position: relative;
 }
+
 .gallery .item {
-  overflow: hidden;
-  text-align: center;
+    overflow: hidden;
+    text-align: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50%, 50%;
@@ -250,329 +259,363 @@
 }
 
 .gallery .controls {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
+
 .gallery .control-button {
-  display: inline-block;
-  margin: 0 .02em;
-  font-size: 3em;
-  text-align: center;
-  text-decoration: none;
-  transition: color .1s;
+    display: inline-block;
+    margin: 0 .02em;
+    font-size: 3em;
+    text-align: center;
+    text-decoration: none;
+    transition: color .1s;
 }
 
-.gallery .control-operator:target ~ .controls .control-button {
-  color: #ccc;
-  color: rgba(255, 255, 255, 0.4);
+.gallery .control-operator:target~.controls .control-button {
+    color: #ccc;
+    color: rgba(255, 255, 255, 0.4);
 }
 
-.gallery .control-button:first-of-type, .gallery .control-operator:nth-of-type(1):target ~ .controls .control-button:nth-of-type(1), .gallery .control-operator:nth-of-type(2):target ~ .controls .control-button:nth-of-type(2), .gallery .control-operator:nth-of-type(3):target ~ .controls .control-button:nth-of-type(3), .gallery .control-operator:nth-of-type(4):target ~ .controls .control-button:nth-of-type(4), .gallery .control-operator:nth-of-type(5):target ~ .controls .control-button:nth-of-type(5) {
-  color: white;
-  color: rgba(255, 255, 255, 0.8);
+.gallery .control-button:first-of-type,
+.gallery .control-operator:nth-of-type(1):target~.controls .control-button:nth-of-type(1),
+.gallery .control-operator:nth-of-type(2):target~.controls .control-button:nth-of-type(2),
+.gallery .control-operator:nth-of-type(3):target~.controls .control-button:nth-of-type(3),
+.gallery .control-operator:nth-of-type(4):target~.controls .control-button:nth-of-type(4),
+.gallery .control-operator:nth-of-type(5):target~.controls .control-button:nth-of-type(5) {
+    color: white;
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .gallery .item:first-of-type {
-  position: static;
-  pointer-events: auto;
-  opacity: 1;
+    position: static;
+    pointer-events: auto;
+    opacity: 1;
 }
+
 .gallery .item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity .5s;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity .5s;
 }
+
 .gallery .control-operator {
-  display: none;
+    display: none;
 }
-.gallery .control-operator:target ~ .item {
-  pointer-events: none;
-  opacity: 0;
-  animation: none;
+
+.gallery .control-operator:target~.item {
+    pointer-events: none;
+    opacity: 0;
+    animation: none;
 }
-.gallery .control-operator:target ~ .controls .control-button {
-  animation: none;
+
+.gallery .control-operator:target~.controls .control-button {
+    animation: none;
 }
 
 @keyframes controlAnimation-2 {
-  0% {
-    color: #ccc;
-    color: rgba(255, 255, 255, 0.4);
-  }
-
-  14.3%,
-  50% {
-    color: white;
-    color: rgba(255, 255, 255, 0.8);
-  }
-
-  64.3%,
-  100% {
-    color: #ccc;
-    color: rgba(255, 255, 255, 0.4);
-  }
+    0% {
+        color: #ccc;
+        color: rgba(255, 255, 255, 0.4);
+    }
+    14.3%,
+    50% {
+        color: white;
+        color: rgba(255, 255, 255, 0.8);
+    }
+    64.3%,
+    100% {
+        color: #ccc;
+        color: rgba(255, 255, 255, 0.4);
+    }
 }
+
 @keyframes galleryAnimation-2 {
-  0% {
-    opacity: 0;
-  }
+    0% {
+        opacity: 0;
+    }
+    14.3%,
+    50% {
+        opacity: 1;
+    }
+    64.3%,
+    100% {
+        opacity: 0;
+    }
+}
 
-  14.3%,
-  50% {
+.gallery .control-operator:nth-of-type(1):target~.item:nth-of-type(1) {
+    pointer-events: auto;
     opacity: 1;
-  }
+}
 
-  64.3%,
-  100% {
-    opacity: 0;
-  }
-}
-.gallery .control-operator:nth-of-type(1):target ~ .item:nth-of-type(1) {
-  pointer-events: auto;
-  opacity: 1;
-}
-.gallery .control-operator:nth-of-type(2):target ~ .item:nth-of-type(2) {
-  pointer-events: auto;
-  opacity: 1;
+.gallery .control-operator:nth-of-type(2):target~.item:nth-of-type(2) {
+    pointer-events: auto;
+    opacity: 1;
 }
 
 .items-2.autoplay .control-button {
-  animation: controlAnimation-2 14s infinite;
+    animation: controlAnimation-2 14s infinite;
 }
+
 .items-2.autoplay .item {
-  animation: galleryAnimation-2 14s infinite;
+    animation: galleryAnimation-2 14s infinite;
 }
+
 .items-2 .control-button:nth-of-type(1),
 .items-2 .item:nth-of-type(1) {
-  animation-delay: -2s;
+    animation-delay: -2s;
 }
+
 .items-2 .control-button:nth-of-type(2),
 .items-2 .item:nth-of-type(2) {
-  animation-delay: 5s;
+    animation-delay: 5s;
 }
 
 @keyframes controlAnimation-3 {
-  0% {
-    color: #ccc;
-    color: rgba(255, 255, 255, 0.4);
-  }
-
-  9.5%,
-  33.3% {
-    color: white;
-    color: rgba(255, 255, 255, 0.8);
-  }
-
-  42.9%,
-  100% {
-    color: #ccc;
-    color: rgba(255, 255, 255, 0.4);
-  }
+    0% {
+        color: #ccc;
+        color: rgba(255, 255, 255, 0.4);
+    }
+    9.5%,
+    33.3% {
+        color: white;
+        color: rgba(255, 255, 255, 0.8);
+    }
+    42.9%,
+    100% {
+        color: #ccc;
+        color: rgba(255, 255, 255, 0.4);
+    }
 }
+
 @keyframes galleryAnimation-3 {
-  0% {
-    opacity: 0;
-  }
+    0% {
+        opacity: 0;
+    }
+    9.5%,
+    33.3% {
+        opacity: 1;
+    }
+    42.9%,
+    100% {
+        opacity: 0;
+    }
+}
 
-  9.5%,
-  33.3% {
+.gallery .control-operator:nth-of-type(1):target~.item:nth-of-type(1) {
+    pointer-events: auto;
     opacity: 1;
-  }
+}
 
-  42.9%,
-  100% {
-    opacity: 0;
-  }
+.gallery .control-operator:nth-of-type(2):target~.item:nth-of-type(2) {
+    pointer-events: auto;
+    opacity: 1;
 }
-.gallery .control-operator:nth-of-type(1):target ~ .item:nth-of-type(1) {
-  pointer-events: auto;
-  opacity: 1;
-}
-.gallery .control-operator:nth-of-type(2):target ~ .item:nth-of-type(2) {
-  pointer-events: auto;
-  opacity: 1;
-}
-.gallery .control-operator:nth-of-type(3):target ~ .item:nth-of-type(3) {
-  pointer-events: auto;
-  opacity: 1;
+
+.gallery .control-operator:nth-of-type(3):target~.item:nth-of-type(3) {
+    pointer-events: auto;
+    opacity: 1;
 }
 
 .items-3.autoplay .control-button {
-  animation: controlAnimation-3 21s infinite;
+    animation: controlAnimation-3 21s infinite;
 }
+
 .items-3.autoplay .item {
-  animation: galleryAnimation-3 21s infinite;
+    animation: galleryAnimation-3 21s infinite;
 }
+
 .items-3 .control-button:nth-of-type(1),
 .items-3 .item:nth-of-type(1) {
-  animation-delay: -2s;
+    animation-delay: -2s;
 }
+
 .items-3 .control-button:nth-of-type(2),
 .items-3 .item:nth-of-type(2) {
-  animation-delay: 5s;
+    animation-delay: 5s;
 }
+
 .items-3 .control-button:nth-of-type(3),
 .items-3 .item:nth-of-type(3) {
-  animation-delay: 12s;
+    animation-delay: 12s;
 }
 
 @keyframes controlAnimation-4 {
-  0% {
-    color: #ccc;
-    color: rgba(255, 255, 255, 0.4);
-  }
-
-  7.1%,
-  25% {
-    color: white;
-    color: rgba(255, 255, 255, 0.8);
-  }
-
-  32.1%,
-  100% {
-    color: #ccc;
-    color: rgba(255, 255, 255, 0.4);
-  }
+    0% {
+        color: #ccc;
+        color: rgba(255, 255, 255, 0.4);
+    }
+    7.1%,
+    25% {
+        color: white;
+        color: rgba(255, 255, 255, 0.8);
+    }
+    32.1%,
+    100% {
+        color: #ccc;
+        color: rgba(255, 255, 255, 0.4);
+    }
 }
+
 @keyframes galleryAnimation-4 {
-  0% {
-    opacity: 0;
-  }
+    0% {
+        opacity: 0;
+    }
+    7.1%,
+    25% {
+        opacity: 1;
+    }
+    32.1%,
+    100% {
+        opacity: 0;
+    }
+}
 
-  7.1%,
-  25% {
+.gallery .control-operator:nth-of-type(1):target~.item:nth-of-type(1) {
+    pointer-events: auto;
     opacity: 1;
-  }
+}
 
-  32.1%,
-  100% {
-    opacity: 0;
-  }
+.gallery .control-operator:nth-of-type(2):target~.item:nth-of-type(2) {
+    pointer-events: auto;
+    opacity: 1;
 }
-.gallery .control-operator:nth-of-type(1):target ~ .item:nth-of-type(1) {
-  pointer-events: auto;
-  opacity: 1;
+
+.gallery .control-operator:nth-of-type(3):target~.item:nth-of-type(3) {
+    pointer-events: auto;
+    opacity: 1;
 }
-.gallery .control-operator:nth-of-type(2):target ~ .item:nth-of-type(2) {
-  pointer-events: auto;
-  opacity: 1;
-}
-.gallery .control-operator:nth-of-type(3):target ~ .item:nth-of-type(3) {
-  pointer-events: auto;
-  opacity: 1;
-}
-.gallery .control-operator:nth-of-type(4):target ~ .item:nth-of-type(4) {
-  pointer-events: auto;
-  opacity: 1;
+
+.gallery .control-operator:nth-of-type(4):target~.item:nth-of-type(4) {
+    pointer-events: auto;
+    opacity: 1;
 }
 
 .items-4.autoplay .control-button {
-  animation: controlAnimation-4 28s infinite;
+    animation: controlAnimation-4 28s infinite;
 }
+
 .items-4.autoplay .item {
-  animation: galleryAnimation-4 28s infinite;
+    animation: galleryAnimation-4 28s infinite;
 }
+
 .items-4 .control-button:nth-of-type(1),
 .items-4 .item:nth-of-type(1) {
-  animation-delay: -2s;
+    animation-delay: -2s;
 }
+
 .items-4 .control-button:nth-of-type(2),
 .items-4 .item:nth-of-type(2) {
-  animation-delay: 5s;
+    animation-delay: 5s;
 }
+
 .items-4 .control-button:nth-of-type(3),
 .items-4 .item:nth-of-type(3) {
-  animation-delay: 12s;
+    animation-delay: 12s;
 }
+
 .items-4 .control-button:nth-of-type(4),
 .items-4 .item:nth-of-type(4) {
-  animation-delay: 19s;
+    animation-delay: 19s;
 }
 
 @keyframes controlAnimation-5 {
-  0% {
-    color: #ccc;
-    color: rgba(255, 255, 255, 0.4);
-  }
-
-  5.7%,
-  20% {
-    color: white;
-    color: rgba(255, 255, 255, 0.8);
-  }
-
-  25.7%,
-  100% {
-    color: #ccc;
-    color: rgba(255, 255, 255, 0.4);
-  }
+    0% {
+        color: #ccc;
+        color: rgba(255, 255, 255, 0.4);
+    }
+    5.7%,
+    20% {
+        color: white;
+        color: rgba(255, 255, 255, 0.8);
+    }
+    25.7%,
+    100% {
+        color: #ccc;
+        color: rgba(255, 255, 255, 0.4);
+    }
 }
+
 @keyframes galleryAnimation-5 {
-  0% {
-    opacity: 0;
-  }
+    0% {
+        opacity: 0;
+    }
+    5.7%,
+    20% {
+        opacity: 1;
+    }
+    25.7%,
+    100% {
+        opacity: 0;
+    }
+}
 
-  5.7%,
-  20% {
+.gallery .control-operator:nth-of-type(1):target~.item:nth-of-type(1) {
+    pointer-events: auto;
     opacity: 1;
-  }
+}
 
-  25.7%,
-  100% {
-    opacity: 0;
-  }
+.gallery .control-operator:nth-of-type(2):target~.item:nth-of-type(2) {
+    pointer-events: auto;
+    opacity: 1;
 }
-.gallery .control-operator:nth-of-type(1):target ~ .item:nth-of-type(1) {
-  pointer-events: auto;
-  opacity: 1;
+
+.gallery .control-operator:nth-of-type(3):target~.item:nth-of-type(3) {
+    pointer-events: auto;
+    opacity: 1;
 }
-.gallery .control-operator:nth-of-type(2):target ~ .item:nth-of-type(2) {
-  pointer-events: auto;
-  opacity: 1;
+
+.gallery .control-operator:nth-of-type(4):target~.item:nth-of-type(4) {
+    pointer-events: auto;
+    opacity: 1;
 }
-.gallery .control-operator:nth-of-type(3):target ~ .item:nth-of-type(3) {
-  pointer-events: auto;
-  opacity: 1;
-}
-.gallery .control-operator:nth-of-type(4):target ~ .item:nth-of-type(4) {
-  pointer-events: auto;
-  opacity: 1;
-}
-.gallery .control-operator:nth-of-type(5):target ~ .item:nth-of-type(5) {
-  pointer-events: auto;
-  opacity: 1;
+
+.gallery .control-operator:nth-of-type(5):target~.item:nth-of-type(5) {
+    pointer-events: auto;
+    opacity: 1;
 }
 
 .items-5.autoplay .control-button {
-  animation: controlAnimation-5 35s infinite;
+    animation: controlAnimation-5 35s infinite;
 }
+
 .items-5.autoplay .item {
-  animation: galleryAnimation-5 35s infinite;
+    animation: galleryAnimation-5 35s infinite;
 }
+
 .items-5 .control-button:nth-of-type(1),
 .items-5 .item:nth-of-type(1) {
-  animation-delay: -2s;
+    animation-delay: -2s;
 }
+
 .items-5 .control-button:nth-of-type(2),
 .items-5 .item:nth-of-type(2) {
-  animation-delay: 5s;
+    animation-delay: 5s;
 }
+
 .items-5 .control-button:nth-of-type(3),
 .items-5 .item:nth-of-type(3) {
-  animation-delay: 12s;
+    animation-delay: 12s;
 }
+
 .items-5 .control-button:nth-of-type(4),
 .items-5 .item:nth-of-type(4) {
-  animation-delay: 19s;
+    animation-delay: 19s;
 }
+
 .items-5 .control-button:nth-of-type(5),
 .items-5 .item:nth-of-type(5) {
-  animation-delay: 26s;
+    animation-delay: 26s;
+}
+
+.inline-block {
+    display: inline-block;
 }
