--- a/src/scss/_06-components.scss
+++ b/src/scss/_06-components.scss
@@ -688,44 +688,7 @@ fieldset {
     outline: none;
 }
 
-//.md-button {
-//    display: inline-block;
-//    position: relative;
-//    background: $white;
-//    width: 150px;
-//    height: 50px;
-//    color: $primaryColor;
-//    text-decoration: none;
-//    text-transform: lowercase;
-//    margin: 1rem;
-//    border-radius: 2px;
-//    font-family: $heading;
-//    font-size: 20px;
-//    outline: none;
-//    border: 0px;
-//}
-//
-//.md-button span {
-//    width: 100%;
-//    text-align: center;
-//    position: absolute;
-//    top: 50%;
-//    left: 50%;
-//    transform: translate(-50%, -50%);
-//    z-index: 9999;
-//    pointer-events: none;
-//    outline: none;
-//    border: 0px;
-//}
-//
-//.md-button canvas {
-//    position: absolute;
-//    top: 0;
-//    left: 0;
-//    z-index: 4;
-//    border-radius: 2px;
-//    outline: none;
-//}
+
 .footer-icon {
     height: 4rem;
     padding-top: 0.4em;
@@ -1204,7 +1167,7 @@ body.stop-scrolling {
     position: absolute;
     width: 60px;
     height: 120px;
-    background: white;
+    background: $lightGreyTwo;
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
 }
@@ -1248,7 +1211,7 @@ body.stop-scrolling {
 .sweet-alert .sa-icon.sa-success .sa-fix {
     width: 5px;
     height: 90px;
-    background-color: white;
+    background-color: $lightGreyTwo;
     position: absolute;
     left: 28px;
     top: 8px;
