--- a/src/scss/_01-settings.scss
+++ b/src/scss/_01-settings.scss
@@ -26,6 +26,15 @@ $default-font-size: 16;
 
 // Fonts
 
-$heading: 'League Spartan Bold', arial, sans-serif;
+@font-face {
+    font-family: 'league_spartanregular';
+    src: url('../font/leaguespartan-bold-webfont.woff2') format('woff2'),
+         url('../font/leaguespartan-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+$heading: 'league_spartanregular', arial, sans-serif;
 $body: 'Biryani', sans-serif;
  
